src/objects/Volunteer_Shift__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desired_of_Volunteers__c</fullName>
        <label>Desired # of Volunteers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shift_End_Time__c</fullName>
        <label>Shift End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shift_Hours__c</fullName>
        <formula>(floor(( Shift_End_Time__c - Shift_Start_Time__c )*24))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shift Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shift_Start_Time__c</fullName>
        <label>Shift Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shifts_Taken__c</fullName>
        <label>Shifts Taken</label>
        <summaryFilterItems>
            <field>Volunteer_Shift_Worker__c.Status__c</field>
            <operation>equals</operation>
            <value>Confirmed,Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Volunteer_Shift_Worker__c.Volunteer_Shift__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Vol_Hours_for_Shift__c</fullName>
        <formula>Shift_Hours__c * Shifts_Taken__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Vol Hours for Shift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volunteer_Job__c</fullName>
        <label>Volunteer Job</label>
        <referenceTo>Volunteer_Job__c</referenceTo>
        <relationshipLabel>Volunteer Shifts</relationshipLabel>
        <relationshipName>Volunteer_Shifts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>of_Volunteers_Still_Needed__c</fullName>
        <formula>IF((Desired_of_Volunteers__c - Shifts_Taken__c) &gt; 0 , (Desired_of_Volunteers__c - Shifts_Taken__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Volunteers Still Needed</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Volunteer Shift</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Volunteer Shift Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Shifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>